--- a/quickstart.html
+++ b/quickstart.html
@@ -1,12 +1,110 @@
+<!-- https://developers.google.com/gmail/api/quickstart/js -->
 <html>
     <head>
         <script src="credentials.js"></script><!-- cwkTODO research a better way to do this -->
         <script type="text/javascript">
             var CLIENT_ID = gmailyticsClientID;
-            alert("your client id is: " + CLIENT_ID);
-        </script>
-    </head>
 
+            var SCOPES = ['https://www.googleapis.com/auth/gmail.readonly'];
+
+            /**
+             * Check if current user has authorized this application.
+             */
+             function checkAuth() {
+                gapi.auth.authorize({
+                    client_id : CLIENT_ID,
+                    scope : SCOPES.join(' '),
+                    immediate :  true
+                }, handleAuthResult);
+             }
+
+             /**
+              * Handle response from authorization server.
+              * 
+              * @param {Object} authResult Authorization result.
+              */
+             function handleAuthResult(authResult) {
+                var authorizeDiv = document.getElementById('authorize-div');
+                if (authResult && !authResult.error) {
+                    // Hide auth UI, then load client library.
+                    authorizeDiv.style.display = 'none';
+                    loadGmailApi();
+                } else {
+                    // Show auth UI, allowing the user to initiate authorization by
+                    // clicking authorize button.
+                    authorizeDiv.style.display = 'inline';
+                }
+             }
+
+             /**
+              * Initiate auth flow in response to user clicking authorize button.
+              *
+              * @param {Event} event Button click event.
+              */
+             function handleAuthClick(event) {
+                gapi.auth.authorize({
+                    client_id : CLIENT_ID,
+                    scope : SCOPES,
+                    immediate : false
+                }, handleAuthResult);
+
+                return false;
+             }
+
+             /**
+              * Load Gmail API client library. List labels once client library
+              * is loaded.
+              */
+             function loadGmailApi() {
+                gapi.client.load('gmail', 'v1', listLabels);
+             }
+
+             /**
+              * Print all Labels in the authorized user's inbox. If no labels
+              * are found, an appropriate message is printed.
+              */
+             function listLabels() {
+                var request = gapi.client.gmail.users.labels.list({
+                    userId : 'me'
+                });
+
+                request.execute(function(resp) {
+                    var labels = resp.labels;
+                    appendPre('Labels:');
+
+                    if (labels && labels.length > 0) {
+                        for (var i = 0; i < labels.length; i++) {
+                            var label = labels[i];
+                            appendPre(label.name);
+                        }
+                    } else {
+                        appendPre('No Labels found.');
+                    }
+                });
+             }
+
+             /**
+              * Append a pre element to the body containing the given message
+              * as its text node.
+              *
+              * @param {string} message Text to be placed in pre element.
+              */
+             function appendPre(message) {
+                var pre = document.getElementById('output');
+                var textContent = document.createTextNode(message + '\n');
+                pre.appendChild(textContent);
+             }
+        </script>
+        <script src="https://apis.google.com/js/client.js?onload=checkAuth"></script>
+    </head>
     <body>
+        <div id="authorize-div" style="display: none">
+            <span>Authorize access to Gmail API</span>
+            <!-- Button for the user to click to initiate auth sequence -->
+            <button id="authorize-button" onclick="handleAuthClick(event)">
+                Authorize
+            </button>
+        </div>
+        <pre id="output"></pre>
     </body>
 </html>
