--- a/quickstart.html
+++ b/quickstart.html
@@ -155,7 +155,7 @@
                             message.isRead = !hasLabel(resp, "UNREAD");
                             message.isStarred = hasLabel(resp, "STARRED");
                             message.date = getHeaderValue(headers, "Date");
-                            //message.dayOfWeek //cwkTODO
+                            message.dayOfWeek = new Date(message.date).getDay();
                             //message.location //cwkTODO pass senderIPAddress to API to get coordinates (Ref: https://ctrlq.org/code/20046-email-ip-address)
                             message.snippet = resp.snippet;
 
