Start building data structure for emails by sender chart

--- a/dashboard.html
+++ b/dashboard.html
@@ -15,7 +15,9 @@
             </button>
         </div>
 
-        <h2>Emails:</h2>
+        <button id="makeCharts" onclick="handleMakeChartsClick(event)">Make Charts!</button>
+
+        <h2 id="emailsHeader">Emails:</h2>
         <pre id="email"></pre>
     </body>
 </html>
