--- a/dashboard.html
+++ b/dashboard.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <script src="credentials.js"></script><!-- cwkTODO research a better way to do this -->
+        <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
         <script src="Message.js"></script>
         <script src="dashboard.js"></script>
         <script src="https://apis.google.com/js/client.js?onload=checkAuth"></script>
