Cache messages in sessionStorage to save on API calls while developing

--- a/dashboard.html
+++ b/dashboard.html
@@ -19,6 +19,7 @@
         <button id="makeCharts" onclick="handleMakeChartsClick(event)">Make Charts!</button>
 
         <h2 id="emailsHeader">Emails:</h2>
+        <pre id="output"></pre>
         <pre id="email"></pre>
     </body>
 </html>
