Add global-setup and namespace the credential global variable

--- a/dashboard.html
+++ b/dashboard.html
@@ -1,9 +1,12 @@
 <!-- From: https://developers.google.com/gmail/api/quickstart/js -->
 <html>
     <head>
+        <!-- Change these to use some package/module manager -->
+        <!-- storage, messageParsing, charts, dashboard/main -->
+        <script src="global-setup.js"></script>
         <script src="credentials.js"></script><!-- cwkTODO research a better way to do this -->
-        <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
         <script src="Message.js"></script>
+        <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
         <script src="dashboard.js"></script>
         <script src="https://apis.google.com/js/client.js?onload=checkAuth"></script>
     </head>
