Move storage logic to separate file

--- a/dashboard.html
+++ b/dashboard.html
@@ -2,9 +2,10 @@
 <html>
     <head>
         <!-- Change these to use some package/module manager -->
-        <!-- storage, messageParsing, charts, dashboard/main -->
+        <!-- TODO: messageParsing, charts, dashboard/main -->
         <script src="global-setup.js"></script>
         <script src="credentials.js"></script><!-- cwkTODO research a better way to do this -->
+        <script src="storage.js"></script>
         <script src="Message.js"></script>
         <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
         <script src="dashboard.js"></script>
