Refactor out message creating logic

--- a/dashboard.html
+++ b/dashboard.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <!-- Change these to use some package/module manager -->
-        <!-- TODO: messageParsing, charts, dashboard/main -->
+        <!-- TODO: messageParsing, dashboard/main -->
         <script src="global-setup.js"></script>
         <script src="credentials.js"></script><!-- cwkTODO research a better way to do this -->
         <script src="storage.js"></script>
