--- a/dashboard.html
+++ b/dashboard.html
@@ -7,8 +7,12 @@
         <script src="storage.js"></script>
         <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
         <script src="messages.js"></script>
+
         <script src="charts.js"></script>
+        <script src="charts/emailsBySenderChart.js"></script>        
+        
         <script src="dashboard.js"></script>
+        
         <script src="https://apis.google.com/js/client.js?onload=checkAuth"></script>
     </head>
     <body>
