Use a local copy of d3

--- a/dashboard.html
+++ b/dashboard.html
@@ -5,7 +5,10 @@
         <script src="global-setup.js"></script>
         <script src="credentials.js"></script><!-- cwkTODO research a better way to do this -->
         <script src="storage.js"></script>
-        <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+
+        <!-- <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script> -->
+        <script src="d3.v3.min.js"></script>
+
         <script src="messages.js"></script>
 
         <script src="charts.js"></script>
