Add initial emailsOverTime chart (dots)

--- a/dashboard.html
+++ b/dashboard.html
@@ -14,6 +14,7 @@
         <script src="charts.js"></script>
         <script src="charts/emailsBySenderChart.js"></script>
         <script src="charts/emailsPerWeekdayChart.js"></script>
+        <script src="charts/emailsOverTimeChart.js"></script>
         
         <script src="dashboard.js"></script>
         
